@@ -32,11 +32,9 @@ import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.mockito.InjectMocks;
-import org.springframework.data.domain.Page;
-import org.springframework.data.domain.PageImpl;
-import org.springframework.data.domain.PageRequest;
 import org.springframework.http.MediaType;
 import org.springframework.restdocs.RestDocumentationContextProvider;
+import org.springframework.test.util.ReflectionTestUtils;
 import org.springframework.test.web.servlet.setup.MockMvcBuilders;
 import shop.kkeujeok.kkeujeokbackend.auth.api.dto.request.TokenReqDto;
 import shop.kkeujeok.kkeujeokbackend.common.annotation.ControllerTest;
@@ -47,7 +45,6 @@ import shop.kkeujeok.kkeujeokbackend.dashboard.team.api.dto.response.TeamDashboa
 import shop.kkeujeok.kkeujeokbackend.dashboard.team.api.dto.response.TeamDashboardListResDto;
 import shop.kkeujeok.kkeujeokbackend.dashboard.team.domain.TeamDashboard;
 import shop.kkeujeok.kkeujeokbackend.global.annotationresolver.CurrentUserEmailArgumentResolver;
-import shop.kkeujeok.kkeujeokbackend.global.dto.PageInfoResDto;
 import shop.kkeujeok.kkeujeokbackend.global.error.ControllerAdvice;
 import shop.kkeujeok.kkeujeokbackend.member.domain.Member;
 import shop.kkeujeok.kkeujeokbackend.member.domain.SocialType;
@@ -86,6 +83,10 @@ class TeamDashboardControllerTest extends ControllerTest {
         teamDashboardSaveReqDto = new TeamDashboardSaveReqDto("title", "description");
         teamDashboardUpdateReqDto = new TeamDashboardUpdateReqDto("updateTitle", "updateDescription");
         teamDashboard = teamDashboardSaveReqDto.toEntity(member);
+
+        ReflectionTestUtils.setField(teamDashboard, "id", 1L);
+        ReflectionTestUtils.setField(member, "id", 1L);
+        ReflectionTestUtils.setField(teamDashboard, "member", member);
 
         teamDashboardController = new TeamDashboardController(teamDashboardService);
 
@@ -185,17 +186,11 @@ class TeamDashboardControllerTest extends ControllerTest {
     @Test
     void 팀_대시보드_전체_조회() throws Exception {
         // given
-        Page<TeamDashboard> teamDashboardPage = new PageImpl<>(
-                List.of(teamDashboard),
-                PageRequest.of(0, 10),
-                1
-        );
-        TeamDashboardListResDto response = TeamDashboardListResDto.of(
-                Collections.singletonList(TeamDashboardInfoResDto.of(member, teamDashboard)),
-                PageInfoResDto.from(teamDashboardPage)
+        TeamDashboardListResDto response = TeamDashboardListResDto.from(
+                Collections.singletonList(TeamDashboardInfoResDto.of(member, teamDashboard))
         );
 
-        given(teamDashboardService.findForTeamDashboard(anyString(), any())).willReturn(response);
+        given(teamDashboardService.findForTeamDashboard(anyString())).willReturn(response);
 
         // when & then
         mockMvc.perform(get("/api/dashboards/team/")
@@ -225,9 +220,8 @@ class TeamDashboardControllerTest extends ControllerTest {
                                         .description("팀 대시보드의 완료된 블록 진행률"),
                                 fieldWithPath("data.teamDashboardInfoResDto[].joinMembers")
                                         .description("팀 대시보드에 참여한 사용자"),
-                                fieldWithPath("data.pageInfoResDto.currentPage").description("현재 페이지"),
-                                fieldWithPath("data.pageInfoResDto.totalPages").description("전체 페이지"),
-                                fieldWithPath("data.pageInfoResDto.totalItems").description("전체 아이템")
+                                fieldWithPath("data.pageInfoResDto")
+                                        .description("페이지 정보가 없습니다.")
                         )
                 ))
                 .andExpect(status().isOk());
